--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@
 \chapter{Introduction}
 \label{chapter.introduction}
 
-\section{Definition of AMCs}
+\kc{Definition of AMCs:}
 Asymmetric Multi-core (AMC) systems architecture is an interesting case of heterogeneous multi-core architecture. 
 This multi-core systems architecture features cores with different microarchitectures but with a single Instruction Set Architecture (ISA) and potentially shared memory resources.
 Figure~\ref{fig:heterogeneous_classification} shows a classification of multi-core systems and how AMCs relate to the rest of the multi-cores.
@@ -18,7 +18,7 @@ Figure~\ref{fig:heterogeneous_classification} shows a classification of multi-co
 Multi-core systems can be either homogeneous or heterogeneous.
 A homogeneous multi-core consists of multiple identical processing cores that have the same micro-architecture and instruction set architecture.
 A heterogeneous multi-core can fall into two categories. 
-The first category consists multi-cores with different micro-architectures and ISA; systems with GPUs or other compute accelerators fall in this category.
+The first category consists of multi-cores with different micro-architectures and ISA; systems with GPUs or other compute accelerators fall in this category.
 The second category consists of of multi-cores that have different micro-architecture but a single ISA; AMC systems fall in this category.
 
 %it can either consist of multiple cores that have different micro-architecture but a single ISA, or it can consist of multiple cores with different micro-architectures and ISA.
@@ -34,17 +34,20 @@ The Sunway TaihuLight supercomputer topped the Top500\footnote{We refer to the l
 In this setup, big cores, that offer support for speculation to exploit Instruction-Level Parallelism (ILP), run the master tasks such as the OS and runtime system.
 Little cores are equipped with wide Single Instruction Multiple Data (SIMD) units and lean pipeline structures for energy efficient execution of compute-intensive code. 
 
-\section{Challenges Using AMCs}
-AMCs are easy to program as the programmer does not need to express the functionality of an application for many different ISAs. 
+\kc{Challenges Using AMCs:}
+AMCs are generally easy to program as the programmer does not need to express the functionality of an application for many different ISAs. 
 However, there are still challenges that need to be addressed that are mainly related to the performance of the AMC.
 %%Add more challenges
 Like in other heterogeneous systems, load balancing and scheduling are fundamental challenges that must be addressed to effectively exploit all the resources in AMC platforms~\cite{Suleman:APLOS2009,Fedorova2009,Greenhalgh2011,Joao:ASPLOS2012,Joao:ISCA2013,ARM4HPC_SC13}. 
 To preserve load balance, the system has to make sure that the cores of the system remain busy and are fairly loaded depending on their type.
-For example running a barrier-based multi-threaded application where each thread runs on one core on an AMC is challenging as there is a high risk of starvation of the fast cores~\cite{AMC_survey}. %ending up in starvation. 
+For example running a barrier-based multi-threaded application where each thread runs on one core on an AMC might result to performance degradation as there is a high risk of starvation of the fast cores~\cite{AMC_survey}. %ending up in starvation. 
 %the fast cores of the system will remain idle after they finish their computations waiting for the slow cores to finish execution.
 %This is trivial for multi-threaded applications that run on homogeneous multi-cores but it is not as trivial on an AMC where an equal thread distribution would lead to potential starvation of the fast cores as they 
-Additionally, choosing which threads to execute in each type of core requires runtime information such as task dependencies or whether a task is memory or computationally bound.
-The above challenges require new asymmetry-aware scheduling approaches in order to take advantage of the heterogeneity.
+
+Additionally, choosing which task to execute in each type of core of an AMC is not as straightforward. 
+Due to the different benefits offered by each core type, such decisions require runtime information, like task dependencies or whether a task is memory or computationally bound.
+An interesting approach against the above challenges is to take advantage of the heterogeneity of an AMC by providing novel asymmetry-aware schedulers. 
+%The above challenges require new asymmetry-aware scheduling approaches in order to take advantage of the heterogeneity.
 The state-of-the-art asymmetry-aware scheduling approaches perform thread scheduling within the Linux kernel. 
 The most commonly used example in this category is the Global Task Scheduler (GTS)~\cite{?} that is implemented on top of the Linux Completely Fair Scheduler (CFS) and is aware of the asymmetry of the system.
 However, such approaches lack flexibility due to the high thread-migration overheads~\cite{AMC_survey}.
@@ -52,10 +55,7 @@ However, such approaches lack flexibility due to the high thread-migration overh
 %However, these approaches are not always suitable for general-purpose parallel applications.
 
 
-
-
-\section{Solutions}
-\kc{mention to Task-based models and process scheduling}
+\kc{Solutions -- mention to Task-based models and process scheduling}
 The above challenges can be tackled by using task-based parallel programming models.
 These parallel programming models have been widely used during the last decade in the development of parallel applications.
 They form an appealing solution as they significantly ease the parallel programming by providing a higher level of abstraction to the programmer through a directive-based or language-based interface.
@@ -81,7 +81,7 @@ task2(&y, &x);
 return 0;
 }
 \end{lstlisting}
-As an example, Listing~\ref{task-based-example} shows a simple usage of a task-based programming model (the OmpSs programming model~\cite{OmpSs}).
+As an example, Listing~\ref{task-based-example} shows a simple usage of a directive-based task-based programming model (the OmpSs programming model~\cite{OmpSs}).
 In this code, the \textit{pragma omp task} directives define the functions that act as tasks, namely \texttt{task1} and \texttt{task2}.
 The input and output dependencies between these tasks are defined using the \textit{in}, \textit{out} and \textit{inout} clauses.
 When these task functions are being called by the main function, the runtime system creates tasks that can run in parallel if there are no task dependencies between them.
@@ -90,162 +90,74 @@ Typically the number of software threads that the runtime system maintains is eq
 We further explain how the task-based runtime system functions in Section~\ref{sec.background.taskbased}.
 
 
-
-%In the last decade, task-parallel programming models have
-%emerged as an interesting solution that combines a correct
-%orchestration of parallel programs and a reduced impact on
-%the complexity of the parallel versions of existing or new
-%codes. These models aim at casting a complete computation in
-%terms of discrete pieces of code (tasks) with data dependences
-%among them with the aid of task annotations provided by the
-%programmer, and rely on a runtime task scheduler (or just
-%runtime in the following) that orchestrates the correct ordering
-%of tasks execution as dependences are satisfied at run time.
-%The extension of these programming models and associated
-%runtimes to heterogeneous architectures, managing data coherency
-%and data transfers among isolated memory spaces has
-%been implemented in a number of software efforts, together
-%with techniques that drive to performance gains in multi-core,
-%many-core, accelerator-based and distributed-memory architectures.
-%The necessary efforts to adapt these programming
-%models to AMPs is also a topic of interest of recent works [1],
-%[2], pursuing the goal of boosting performance by correctly
-%mapping critical tasks to the most appropriate element of the
-%asymmetric architecture. However, the impact and possibilities
-%of task schedulers in terms of improving energy efficiency of
-%task-parallel implementations has not been previously studied
-%in such a level of detail. As of today, similar efforts, together
-%with their impact on performance and energy efficiency, have
-%not been ported or adapted to AMPs.
-
-
-\section{Challenges in Task-based models}
+\section{Thesis Motivation}
+\begin{figure}[t]%
+	\centering
+	\includegraphics[width=\textwidth]{figures/thesis_motivation.pdf}
+	\caption{Increased idle time when moving from homogeneous multi-core to asymmetric multi-core}
+	\label{fig:thesis_motivation}
+\end{figure}
 
 As was illustrated by the example of Listing~\ref{task-based-example} task-based programming models offer a very convenient abstraction layer to the programmer for parallelizing applications.
 However, these parallel programming languages exhibit some challenges when moving to asymmetric systems as their runtime system is platform agnostic.
 The current scheduling implementation in task-based programming models assumes that all tasks can be evenly distributed among the cores of the system and treats all tasks and cores as equal.
 In some cases, a bad scheduling decision on an asymmetric system can lead to significant performance degradation. 
-A simple example is when the scheduler decides to execute a task whose output is important for the execution of a set of other tasks to one of the slow cores of the system.
-This would lead to keeping the threads idle waiting for the little core to finish the execution of this important task.
 
-A second challenge introduced by the task-based programming models is the significant task generation overhead.
-\kc{TODO}
+Figure~\ref{fig:thesis_motivation} shows the execution representation of a simple example using a task-based programming model.
+This example consists of three types of tasks that have different execution times.
+In this example the tasks of type taskA have dependencies between them wich means that the taskA tasks cannot execute simultaneously. 
+The leftmost representation shows how a task-based programming model would execute this set of tasks on a homogeneous multi-core (where all cores are the same) while the representation on the right shows how the same example would execute on an asymmetric multi-core where the cores number three and four are faster than the cores number one and two.
+As we can see the idle time of the cores three and four is increased when using this scheduling but this is something that can be addressed if we provide a better scheduling policy in our task-based runtime system.
+Figure~\ref{fig:thesis_motivation2} shows one solution to improve this scheduling while respecting the inter-task dependencies.
+\begin{figure}[t]%
+	\centering
+	\includegraphics[width=0.65\textwidth]{figures/thesis_motivation2.pdf}
+	\caption{Changing the scheduling leads to improvement for AMC systems}
+	\label{fig:thesis_motivation2}
+\end{figure}
+%A simple example is when the scheduler decides to execute a task whose output is important for the execution of a set of other tasks to one of the slow cores of the system.
+%This would lead to keeping the threads idle waiting for the little core to finish the execution of this important task.
 
-
- 
-
-% a class of heterogeneous
-%parallel architectures in which cores that implement
-%different microarchitectures share a common ISA (Instruction
-%Set Architecture) and, possibly, a subset of memory resources.
-%
-%Typically, the available architectural heterogeneity is exploited
-%pursuing energy efficiency and performance restrictions on
-%heterogeneous software environments. One of the most popular
-%implementations of AMPs is the big.LITTLE architectural
-%paradigm present in many ARM SoCs (Systems-on-chip),
-%that combines a number of high performance ARM Cortex-
-%A57/A15 BIG cores with a (possibly different) number of
-%energy-efficient ARM Cortex-A53/A7 LITTLE cores. Leveraging
-%low-power architectures to the HPC (High Performance
-%Computing) arena is one of the main trends in the road
-%towards the Exaflop barrier. Among them, ARM Cortex-A
-%processors, and more specifically, asymmetric SoCs based on
-%this microarchitectural family, are nowadays on the spotlight
-%as the most promising architectures to achieve such a goal.
-
-\if 0
-----------------------------------------
-
-
-The use of heterogeneous processing elements is becoming commodity in many aspects of parallel computing. 
-From mobile devices to high performance supercomputers heterogeneous multi-processing is attracting a lot of attention as it achieves high performance and at the same time it maintains energy consumption at low levels. 
-Asymmetric multi-core systems is an interesting type of heterogeneous multi-processor. 
-These systems maintain different types of cores that share the same instruction set architecture.
-The different core types are designed to target different optimization points. 
-The current state-of-the-art asymmetric system architecture is the Arm big.little architecture~\cite{ARM,Greenhalgh2011}. 
-This architecture combines two types of cores: the out-of-order performance-optimized \textit{big} cores and the in-order energy efficient \textit{little} cores.
-Even though this asymetric multi-core architecture is mainly used on mobile devices, it is a very interesting approach for HPC as the combnation of fast and slow core units can bring benefits in energy consumption.
-
-
-
-
-% Heterogeneous multicores are a reality in the mobile world.
-% 
-% Systems composed of big and little cores can switch from low power to high responding operation modes.
-% 
-% Many researchers are pushing towards building future desktop and HPC systems with mobile chips.
-% 
-% In this paper, we explore the maturity of these platforms for parallel desktop applications, as well as of the programming models used to program them.
-
-%The conventional wisdom in the high-performance computing (HPC) community predicts the power budget of the first exaFLOPS machines to be of a few tens of megawatts~\cite{Kogge_Exascale_TR08}. Should this prediction be correct, the energy efficiency of such machine needs to be around 20-30 times higher than that of the top supercomputers today. This makes energy efficiency, among others such as reliability, storage and networking, one of the main issues for the design of exascale computing technology.
-
-%Using heterogeneous processing elements is one of the approaches to increase energy efficiency. Different types of processors can be specialized for different types of computation, such as the combination of chip-multiprocessors (CMP) and discrete compute-capable graphics processing units (GPUs). Another approach towards heterogeneity is the use of different processors designed targeting different performance and power optimization points, such as the combination of faster and slower cores in a CMP (e.g., ARM big.LITTLE~\cite{Greenhalgh2011}).
-
-
-%Heterogeneity in supercomputing nowadays comes mainly from the use of compute accelerators. Generally, general-purpose chip multiprocessors (CMPs) made out of homogeneous cores are combined together with compute-capable graphics processing units (GPUs) that serve as accelerators for compute-intensive parts of an application. This provides a platform in which some parts of the application will run faster on the CMP, and others on the GPU.
-
-%The STI Cell/B.E.~\cite{IntroCell_IBMRandD05} has been one of the major processors with heterogeneous processing elements on the same chip. It was targeted to the gaming market and its compute capabilities attracted HPC users and vendors. It was substantially adopted in supercomputing and was the most energy efficient HPC technology for some years before being discontinued and becoming obsolete. There are no other recent examples of heterogeneous CMPs used in supercomputing. However, heterogeneous CMPs are mainstream in embedded multimedia and mobile processing. Apart from the processor-accelerator scheme using VLIW/DSP cores~\cite{Viper_IEEEDandT01} or GPUs, some heterogeneous CMPs integrate different types of general-purpose cores~\cite{Greenhalgh2011}. Some works envision the adoption of such mobile technology in HPC for energy efficiency~\cite{ARM4HPC_SC13,Abdurachmanov2013}. In this scenario, a heterogeneous CMP with general-purpose fast and slow cores imposes several challenges regarding scheduling that are different to the current accelerator-based heterogeneous systems. Contrarily to the latter, different parts of an HPC application will constantly run faster on fast cores and slower on slow cores.
-
-%Using heterogeneous processing elements is one of the approaches to increase energy efficiency~\cite{Fedorova2009}. Different types of processors can be specialized for different types of computation, such as the combination of chip-multiprocessors (CMP) and discrete compute-capable graphics processing units (GPUs). Another approach towards heterogeneity is the use of different processors designed targeting different performance and power optimization points, such as the combination of faster and slower cores in a CMP (e.g., ARM big.LITTLE~\cite{Greenhalgh2011}).
-
-% <ISPASS17>
-The future of parallel computing is highly restricted by energy efficiency~\cite{Kogge_Exascale_TR08}. 
-Energy efficiency has become the main challenge for future processor designs, motivating prolific research to face the \emph{power wall}. 
-Using heterogeneous processing elements is one of the approaches to increase energy efficiency~\cite{CompCores,hetServers}. 
-%Different types of processors can be specialized for different types of computation, such as the combination of general-purpose cores with accelerators such as Graphics Processing Units (GPUs). 
-%Another approach towards heterogeneity is the use of asymmetric multi-cores (AMCs).
-%An interesting approach towards energy efficiency is the use of asymmetric multi-core (AMC) systems.
-Asymmetric multi-core (AMC) systems is an interesting case of heterogeneous systems to utilize for energy efficiency.
-These systems maintain different types of cores that support the same instruction-set architecture. 
-The different core types are designed to target different (performance or power) optimization points~\cite{Kumar:ISCA2004,Balakrishnan:ISCA2005,Pangaea}. 
-
-AMCs have been mainly deployed for the mobile market. 
-Mobile processors are also utilized in HPC platforms aiming to energy savings~\cite{ARMV8}.
-Asymmetric mobile SoCs combine low-power simple cores (\emph{little}) with fast out-of-order cores (\emph{big}) to achieve high performance while keeping power dissipation low.
-Another area where AMCs have been successful is the supercomputing market.
-The Sunway TaihuLight supercomputer topped the Top500 list in 2016 using AMCs. 
-In this setup, big cores, that offer support for speculation to exploit Instruction-Level Parallelism (ILP), run the master tasks such as the OS and runtime system.
-Little cores are equipped with wide Single Instruction Multiple Data (SIMD) units and lean pipeline structures for energy efficient execution of compute-intensive code. 
-
-%Previous experiences have shown that load balancing and scheduling are fundamental challenges that must be addressed to effectively exploit all the resources in these platforms~\cite{Suleman:APLOS2009,Fedorova2009,Greenhalgh2011,Joao:ASPLOS2012,Joao:ISCA2013,ARM4HPC_SC13}. 
-Like in other heterogeneous systems, load balancing and scheduling are fundamental challenges that must be addressed to effectively exploit all the resources in AMC platforms~\cite{Suleman:APLOS2009,Fedorova2009,Greenhalgh2011,Joao:ASPLOS2012,Joao:ISCA2013,ARM4HPC_SC13}. 
-Mobile applications rely on multi-programmed workloads to balance the load in the system, while supercomputer applications rely on hand-tuned code to extract maximum performance. 
-However, these approaches are not always suitable for general-purpose parallel applications.
-
-In this paper, we evaluate several execution models on an AMC using the PARSEC benchmark suite~\cite{PARSEC3}. 
-This suite includes parallel applications from multiple domains such as finance, computer vision, physics, image processing and video encoding. 
-We quantify the performance loss of executing the applications \textit{as-is} on all cores in the system. 
-These applications were developed on homogeneous platforms and are bound to suffer from load imbalance on parallel regions that statically distribute the work evenly across cores without considering their performance disparity.
-
-To overcome this matter, we consider two possible solutions at the OS and runtime levels to exploit AMCs effectively.
-The first solution delegates scheduling to the OS.
-We evaluate the built-in heterogeneity-aware OS scheduler currently used in existing mobile platforms that automatically assigns threads to different core types based on CPU utilization. 
-%This approach does not require modifying the application, but is limited for high-utilization multithreaded applications.
-
-The second solution is to transfer the responsibility to the runtime system so it dynamically schedules work to different core types based on work progress and core availability. 
-%The advantage is that the runtime system has knowledge of the application structure and parallel work boundaries so it can react with certain level of predictability. 
-We evaluate the impact of using an inherently load-balanced execution model such that of task-based programming models. 
-Recent examples~\cite{Ayguade:TPDS2009, OpenMP4.0:Manual2013, OmpSs_PPL11, vectorMulticore, Bauer.2012.SC,rollback,Vandierendonck:PACT2011, Vandierendonck:Hyperq,spawn} include clauses to specify inter-task dependencies and remove most barriers which are the major source of load imbalance on AMCs.
-Another approach of scheduling in the runtime system is to change the existing statically-scheduled work-sharing constructs for the applications implemented in OpenMP to use dynamic scheduling. 
-\fi
+Another challenge introduced by the task-based programming models is the significant task generation overhead.
+The high task generation overheads occur on both homogeneous and asymmetric multi-core systems.
+Spending a lot of time on task generation can result to decreased performance as the scheduler is unable to detect the tasks and send them to the appropriate core.
+The leftmost representation of Figure~\ref{fig:taskgenx_motivation} shows how the task generation affects the scheduling and increases the idle time.
+The black rectangles indicate the time spent to create one task and the number inside these boxes show the task that was just created.
+Looking at the yellow rectangles we can see that the execution of each task is delayed due to the delay in task generation.
+The rightmost part of Figure~\ref{fig:taskgenx_motivation} shows how by reducing the task generation time scheduling of the tasks is improved and the CPU idle time is significantly reduced.
+This leads to inefficient schedules with increased idle time.
+Accelerating the task generation overheads increases performance of task-based programming models.
 
 \section{Thesis Contributions}
+
+
+
 \kc{TODO: mention papers and summarize contributions}
 
 The performance of task-based programming models can be boosted by providing sophisticated scheduling policies that take into account the platform's asymmetry.
 
 The contributions made in this thesis rely on the efficient utilization of asymmetric multi-core systems.
-First we study the potential of the AMC systems when running out-of-the-box high performance applications.
+Figure~\ref{fig:research_areas} shows the research areas around performance of AMC systems.
+The areas shown in yellow color indicate the fields of our study.
+
+First we study the potential of the AMC systems when running out-of-the-box HPC applications.
 We compare scheduling on different levels of the software stack and we conclude that using a task-based programming model is indeed the most efficient solution as it allows the runtime system to maintain load balance even if the system is asymmetric.
+This study serves as a verification that for HPC, scheduling through task-based programming models is indeed more efficient compared to app-based scheduling, ash shown on Figure~\ref{fig:research_areas}.
 The paper including this work, named "On the Maturity of Parallel Applications for Asymmetric Multi-Core Processors" is submitted in JPDC journal and is currently under review.
-Additionally this work was published as a poster in the conference of Parallel Architectures and Compilation Techniques in 2016 (PACT'16) with the title "POSTER: Exploiting Asymmetric Multi-Core Processors with Flexible System Sofware"
+Additionally this work was published as a poster in the conference of Parallel Architectures and Compilation Techniques in 2016 (PACT'16) with the title "POSTER: Exploiting Asymmetric Multi-Core Processors with Flexible System Software"
+\begin{figure}[t]%
+	\centering
+	\includegraphics[width=\textwidth]{figures/taskgenx_motivation.pdf}
+	\caption{Task generation overheads leads to increased idle time. Numbers inside the boxes show the task ID that is either being created or executed}
+	\label{fig:taskgenx_motivation}
+\end{figure}
 
 We then approach the two important challenges of using task-based programming models on AMC platforms.
 First, is the scheduling problem, which we approach by providing three novel scheduling policies that are aware of the system's asymmetry.
 These schedulers have different criteria for rating the importance of the executing tasks of an application.
 According to their distinct criteria, each scheduler identifies the \textit{critical tasks} of the application and executes them on the fast cores of the system. 
 They then leave the \textit{non-critical tasks} to be executed by the slower cores of the system.
+The research areas that were studied during at this part of the thesis are the scheduling and dependence analysis of the runtime system as shown on Figure~\ref{fig:research_areas}.
 From this contribution we had two publications; first is the "Criticality-Aware Dynamic Task Scheduling for Heterogeneous Architectures" that was presented in International Conference of Supercomputing in 2015 (ICS'15).
 The second paper including these contributions was published in the journal Transactions of Parallel and Distributed Systems in 2016 (TPDS'16) with the title "Task Scheduling Techniques for Asymmetric Multi-Core Systems".
 
@@ -253,21 +165,22 @@ The second challenge of task-based programming models is the high task generatio
 We tackle this challenge by proposing a software-hardware co-design that accelerates task generation on a specialized hardware.
 In this contribution we implement the TaskGenX runtime system, that decouples the task generation from the other runtime activities and sends it for execution on the runtime optimized accelerator.
 Furthermore, we draw the requirements of the hardware accelerator in terms of performance with the hope to influence hardware designers for the implementation of such a component.
+The research area that is related to this contribution is the resource allocation from Figure~\ref{fig:research_areas} of the runtime systems.
 The paper including this contribution was published in International Supercomputing Conference on 2018 (ISC'18) with the title "TaskGenX: A Hardware-Software Proposal for Accelerating Task Parallelism".
 
 Apart from scheduling within task-based programming models, this thesis includes the high-level description of a thread scheduler for asymmetric systems targeting this time mobile devices.
 Our approach takes scheduling actions depending on the current temperature of the device and manages to increase the frames per second for three game applications while keeping the temperature stable.
 This study is briefly described due to NDA agreement as it was part of my internship in Samsung Electronics Research Institute, UK.
-
-
-
-
-Schedulers: CATS, CPATH, HYBRID
-Runtime system: TaskGenX
-Internship: Real-time scheduler
+This part of the thesis is within the Android framework as shown in Figure~\ref{fig:research_areas}.
 
 
 \section{Thesis Organization}
+\begin{figure}[t]%
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/research_areas.pdf}
+	\caption{Research areas studied in this thesis}
+	\label{fig:research_areas}
+\end{figure}
 The rest of this document is organized as follows: 
 Chapter~\ref{chapter.background} presents the background of tis thesis.
 We first report the characteristics of AMC architectures, we then explain how task-based programming models are organized and how their runtime system operates, we explain a few things about the TaskSim simulator~\cite{AbstrLevels_TACO12}, that is our tool for evaluating the impact of our implementations on larger systems and finally we provide the list of applications used in our evaluation together with a short description for each one.
