--- a/TaskGenX/05-evaluation.tex
+++ b/TaskGenX/05-evaluation.tex
@@ -356,3 +356,14 @@ Improvement over the baseline is still significant as performance with \textit{D
 {\proposal} is the most efficient software-hardware co-design approach when it comes to highly parallel applications.
 On average, it improves the baseline by up to 3.1$\times$ for homogeneous systems and up to 3.7$\times$ for heterogeneous systems.
 Compared to other state of the art approaches, {\proposal} is more effective on a large number of cores showing higher performance by 54\% over \textit{Runtime} driven approaches and by 70\% over \textit{Deps} driven approaches.
+
+
+\subsection{Combining TaskGenX with CATS}
+\begin{figure*}[t]%
+	\centering
+	\includegraphics[width=\columnwidth]{figures/TaskGenX+CATS.pdf}
+	\caption{Average speedup among 7 dependency synchronized workloads on heterogeneous simulated systems. The numbers at the bottom of x axis show the total number of cores and the numbers above them show the number of big cores.}	
+	\label{fig:hetero}
+\end{figure*}
+
+
