--- a/background.tex
+++ b/background.tex
@@ -5,7 +5,7 @@ This study includes software enhancements targeting asymetric multi-core systems
 Thus, we first give some background information about the asymetric multi-core architecture used in this work, which is the ARM big.LITTLE architecture~\cite{Greenhalgh2011}.
 The second part of this chapter, provides information about the parallel programming models, that is the currently used method for parallel programming in HPC applications.
 Finally we we provide a high-level description of the applications used in this work.
-
+\newpage
 \section{The ARM big.LITTLE Architecture}
 \label{sec.background.arm}
 \input{bigLittle_background}
